+ year markers and travis builds

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@ This project adheres to [Semantic Versioning](http://semver.org/).
 ### Added
 - Cookiecutter Skeleton
 - Tests scaffolds
+- Year Markers
 ### Changed
 ### Deprecated
 ### Removed
