--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,3 +11,8 @@ This project adheres to [Semantic Versioning](http://semver.org/).
 ### Removed
 ### Fixed
 
+## [0.0.1] - 2016-05-06
+### Added
+- Cookiecutter Skeleton
+- Tests scaffolds
+- Year Markers
